==> RT-Thread/rt-thread/bsp/hc32f460/drivers/drv_gpio.c <==
#include <rtthread.h>
#include "rthw.h"
#include "drv_gpio.h"
#include "drv_irq.h"
#define GPIO_PCR_INTE               (0x1000U)
#define PIN_EXINT_OFF               (0U)
#define PIN_EXINT_ON                (GPIO_PCR_INTE)
#define GPIO_PIN_INDEX(pin)             ((en_pin_t)((pin) & 0x0F))
#define GPIO_PORT(pin)                  ((en_port_t)(((pin) >> 4) & 0x0F))
#define GPIO_PIN(pin)                   ((en_pin_t)(0x01U << GPIO_PIN_INDEX(pin)))
#define PIN_NUM(port, pin)              (((((port) & 0x0F) << 4) | ((pin) & 0x0F)))
#define PIN_MAX_NUM                     ((PortH * 16) + (__CLZ(__RBIT(Pin13))) + 1)
#define ITEM_NUM(items)                 sizeof(items) / sizeof(items[0])
#define HC32_PIN_CONFIG(pin, irq, src, irq_info)                               \
    {                                                                          \
        .pinbit             = pin,                                             \
        .irq_callback       = irq,                                             \
        .irq_config         = irq_info,                                        \
        .irq_config.int_src = src,                                             \
    }

static void pin_irq_handler(rt_uint16_t pinbit)
{
    rt_int32_t irqindex = -1;

    if (Set == EXINT_GetExIntSrc(pinbit))
    {
        EXINT_ClrExIntSrc(pinbit);
        irqindex = __CLZ(__RBIT(pinbit));
        if (pin_irq_hdr_tab[irqindex].hdr)
        {
            pin_irq_hdr_tab[irqindex].hdr(pin_irq_hdr_tab[irqindex].args);
        }
    }
}

static void hc32_pin_write(rt_device_t dev, rt_base_t pin, rt_base_t value)
{
    en_port_t  gpio_port;
    en_pin_t gpio_pin;

    if (pin < PIN_MAX_NUM)
    {
        gpio_port = GPIO_PORT(pin);
        gpio_pin  = GPIO_PIN(pin);
        if (PIN_LOW == value)
        {
            PORT_ResetBits(gpio_port, gpio_pin);
        }
        else
        {
            PORT_SetBits(gpio_port, gpio_pin);
        }
    }
}

static int hc32_pin_read(rt_device_t dev, rt_base_t pin)
{
    en_port_t  gpio_port;
    en_pin_t gpio_pin;
    int value = PIN_LOW;

    if (pin < PIN_MAX_NUM)
    {
        gpio_port = GPIO_PORT(pin);
        gpio_pin  = GPIO_PIN(pin);
        if (Reset == PORT_GetBit(gpio_port, gpio_pin))
        {
            value = PIN_LOW;
        }
        else
        {
            value = PIN_HIGH;
        }
    }

    return value;
}

static void hc32_pin_mode(rt_device_t dev, rt_base_t pin, rt_base_t mode)
{
    en_port_t  gpio_port;
    en_pin_t gpio_pin;
    stc_port_init_t stcGpioInit;

    if (pin >= PIN_MAX_NUM)
    {
        return;
    }

    MEM_ZERO_STRUCT(stcGpioInit);
    switch (mode)
    {
    case PIN_MODE_OUTPUT:
        stcGpioInit.enPinMode   = Pin_Mode_Out;
        stcGpioInit.enPinOType = Pin_OType_Cmos;
        break;
    case PIN_MODE_INPUT:
        stcGpioInit.enPinMode = Pin_Mode_In;
        break;
    case PIN_MODE_INPUT_PULLUP:
        stcGpioInit.enPinMode = Pin_Mode_In;
        stcGpioInit.enPullUp = Enable;
        break;
    case PIN_MODE_INPUT_PULLDOWN:
        stcGpioInit.enPinMode = Pin_Mode_In;
        stcGpioInit.enPullUp = Disable;
        break;
    case PIN_MODE_OUTPUT_OD:
        stcGpioInit.enPinMode   = Pin_Mode_Out;
        stcGpioInit.enPinOType = Pin_OType_Od;
        break;
    default:
        break;
    }

    gpio_port = GPIO_PORT(pin);
    gpio_pin  = GPIO_PIN(pin);
    PORT_Init(gpio_port, gpio_pin, &stcGpioInit);
}

static rt_err_t hc32_pin_attach_irq(struct rt_device *device, rt_int32_t pin,
                                    rt_uint32_t mode, void (*hdr)(void *args), void *args)
{
    rt_base_t level;
    rt_int32_t irqindex = -1;

    if (pin >= PIN_MAX_NUM)
    {
        return -RT_ENOSYS;
    }

    irqindex = GPIO_PIN_INDEX(pin);
    if (irqindex >= ITEM_NUM(pin_irq_map))
    {
        return RT_ENOSYS;
    }

    level = rt_hw_interrupt_disable();
    if (pin_irq_hdr_tab[irqindex].pin  == pin  &&
            pin_irq_hdr_tab[irqindex].hdr  == hdr  &&
            pin_irq_hdr_tab[irqindex].mode == mode &&
            pin_irq_hdr_tab[irqindex].args == args)
    {
        rt_hw_interrupt_enable(level);
        return RT_EOK;
    }
    if (pin_irq_hdr_tab[irqindex].pin != -1)
    {
        rt_hw_interrupt_enable(level);
        return RT_EBUSY;
    }
    pin_irq_hdr_tab[irqindex].pin  = pin;
    pin_irq_hdr_tab[irqindex].hdr  = hdr;
    pin_irq_hdr_tab[irqindex].mode = mode;
    pin_irq_hdr_tab[irqindex].args = args;
    rt_hw_interrupt_enable(level);

    return RT_EOK;
}

static rt_err_t hc32_pin_irq_enable(struct rt_device *device, rt_base_t pin, rt_uint32_t enabled)

{
    struct hc32_pin_irq_map *irq_map;
    rt_base_t level;
    rt_int32_t irqindex = -1;
    en_pin_t gpio_pin;
    stc_exint_config_t stcExintInit;

    if ((pin >= PIN_MAX_NUM) || ((PIN_IRQ_ENABLE != enabled) && (PIN_IRQ_DISABLE != enabled)))
    {
        return -RT_ENOSYS;
    }

    irqindex = GPIO_PIN_INDEX(pin);
    if (irqindex >= ITEM_NUM(pin_irq_map))
    {
        return RT_ENOSYS;
    }

    irq_map  = &pin_irq_map[irqindex];
    gpio_pin = GPIO_PIN(pin);
    if (enabled == PIN_IRQ_ENABLE)
    {
        level = rt_hw_interrupt_disable();
        if (pin_irq_hdr_tab[irqindex].pin == -1)
        {
            rt_hw_interrupt_enable(level);
            return RT_ENOSYS;
        }

        /* Exint config */
        MEM_ZERO_STRUCT(stcExintInit);
        switch (pin_irq_hdr_tab[irqindex].mode)
        {
        case PIN_IRQ_MODE_RISING:
            stcExintInit.enExtiLvl = ExIntRisingEdge;
            break;
        case PIN_IRQ_MODE_FALLING:
            stcExintInit.enExtiLvl = ExIntFallingEdge;
            break;
        case PIN_IRQ_MODE_RISING_FALLING:
            stcExintInit.enExtiLvl = ExIntBothEdge;
            break;
        case PIN_IRQ_MODE_LOW_LEVEL:
            stcExintInit.enExtiLvl = ExIntLowLevel;
            break;
        }
        stcExintInit.enExitCh    = (en_exti_ch_t)irqindex;//gpio_pin;
        stcExintInit.enFilterEn   = Enable;
        stcExintInit.enFltClk = Pclk3Div8;
        EXINT_Init(&stcExintInit);
        /* IRQ sign-in */
        hc32_install_irq_handler(&irq_map->irq_config, irq_map->irq_callback, RT_FALSE);
        NVIC_EnableIRQ(irq_map->irq_config.irq);
        gpio_irq_config(GPIO_PORT(pin), gpio_pin, PIN_EXINT_ON);

        rt_hw_interrupt_enable(level);
    }
    else
    {
        level = rt_hw_interrupt_disable();
        gpio_irq_config(GPIO_PORT(pin), gpio_pin, PIN_EXINT_OFF);
        NVIC_DisableIRQ(irq_map->irq_config.irq);

        rt_hw_interrupt_enable(level);
    }

    return RT_EOK;
}
